// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results redirects to / if not finished 1`] = `
<div
  data-testid="homeRedirect"
/>
`;

exports[`Results redirects to /quiz if inProgress 1`] = `
<div
  data-testid="quizRedirect"
/>
`;

exports[`Results renders results 1`] = `
<div
  data-testid="homeRedirect"
/>
`;
